<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="login.stx.com.stxlogin.ResignMeActivity"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name"
        android:id="@+id/textView3"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_x="105dp"
        android:layout_y="95dp" />

    <EditText
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginTop="24dp"
        android:layout_x="155dp"
        android:layout_y="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/phone"
        android:id="@+id/textView4"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="33dp"
        android:layout_x="105dp"
        android:layout_y="144dp" />

    <EditText
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:id="@+id/userPhone"
        android:inputType="phone"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName"
        android:layout_x="155dp"
        android:layout_y="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/textView5"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/editText2"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_x="105dp"
            android:layout_y="195dp" />

        <RadioGroup
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_x="155dp"
            android:layout_y="188dp"
            android:weightSum="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radioButton"
                android:checked="true"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:layout_weight="0.46" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radioButton2"
                android:layout_marginLeft="46dp"
                android:layout_marginStart="46dp"
                android:layout_alignBaseline="@+id/radioButton"
                android:layout_alignBottom="@+id/radioButton"
                android:layout_toRightOf="@+id/radioButton"
                android:layout_toEndOf="@+id/radioButton"
                android:layout_weight="0.30" />
        </RadioGroup>
    <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:id="@+id/textView6"
                android:layout_marginTop="28dp"
                android:layout_below="@+id/radioGroup"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_x="24dp"
                android:layout_y="300dp" />

                <Spinner
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:entries="@array/usertype_value"
                    android:layout_alignTop="@+id/textView6"
                    android:layout_alignLeft="@+id/radioGroup"
                    android:layout_alignStart="@+id/radioGroup"
                    android:layout_alignRight="@+id/editText2"
                    android:layout_alignEnd="@+id/editText2"
                    android:layout_x="100dp"
                    android:layout_y="248dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usertype"
                    android:id="@+id/textView7"
                    android:layout_below="@+id/spinner"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"
                    android:layout_marginTop="36dp"
                    android:layout_x="24dp"
                    android:layout_y="250dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basketball"
                    android:id="@+id/checkBox"
                    android:layout_below="@+id/spinner"
                    android:layout_alignLeft="@+id/spinner"
                    android:layout_alignStart="@+id/spinner"
                    android:layout_marginTop="27dp"
                    android:layout_x="265dp"
                    android:layout_y="295dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/football"
                    android:id="@+id/checkBox2"
                    android:layout_above="@+id/button"
                    android:layout_toRightOf="@+id/checkBox"
                    android:layout_toEndOf="@+id/checkBox"
                    android:layout_x="190dp"
                    android:layout_y="295dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pingpong"
                    android:id="@+id/checkBox3"
                    android:layout_above="@+id/button"
                    android:layout_toRightOf="@+id/checkBox2"
                    android:layout_toEndOf="@+id/checkBox2"
                    android:layout_x="100dp"
                    android:layout_y="295dp" />


    -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/imageView3"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="#ff008dff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/title_activity_add_person"
        android:id="@+id/textView"
        android:layout_x="37dp"
        android:layout_y="32dp"
        android:textColor="#ffffffff"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/imageView4"
        android:layout_x="17dp"
        android:layout_y="90dp"
        android:background="@drawable/user_ico" />
    <Button
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:text=""
        android:id="@+id/button"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:onClick="register"
        android:layout_x="280dp"
        android:layout_y="26dp"
        android:background="@drawable/btn_finish" />

    <ImageView
        android:layout_width="43dp"
        android:layout_height="55dp"
        android:id="@+id/imageView5"
        android:layout_x="0dp"
        android:layout_y="19dp"
        android:clickable="true"
        android:onClick="backOnClick"
        android:background="@drawable/btn_back" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img_main_output"
        android:layout_x="83dp"
        android:layout_y="300dp"
        android:background="@drawable/btn_qr"
        android:onClick="OnQRClick"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QRTip"
        android:id="@+id/textView5"
        android:layout_x="83dp"
        android:layout_y="280dp"
        android:textColor="#30000000" />

</AbsoluteLayout>
